--- a/index.html
+++ b/index.html
@@ -6,17 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NEXT3</title>
   <link rel="stylesheet" href="style.css" />
+  <style type="text/css" media="all">
+
+td {
+
+text-align: center;
+
+color: hotpink
+
+}
+
+</style>
+  <style type="text/css" media="all">
+
+h1 {
+
+text-align: center;
+
+color: hotpink
+
+}
+
+</style>
 </head>
 
 <body>
-    <a href="index.html">BACK</a>
-    <h1><span style="color: hotpink;"<marquee>PAGES 3</span></marquee></span></h1>
-
+ <center>
+   <h1>LATIHAN 5 <br>
+   DAFTAR SISWA</h1>
+ </center>
 <center>
-  <h1>DAFTAR SISWA</h1>
-</center>
-<center>
-<table border="1">
+<table border="1
+2"> 
   <tr>
     
     <td>No</td>
@@ -26,7 +47,17 @@
   </tr>
   <tr>
      <td>1.</td>
-    <td>Bejo mujur</td>
+    <td>MA'RUF</td>
+    <td>Lihat detail</td>
+  </tr>
+  <tr>
+         <td>2.</td>
+    <td>JOKOWI</td>
+    <td>Lihat detail</td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>NDAK TAUU</td>
     <td>Lihat detail</td>
   </tr>
 </table>
