--- a/index.html
+++ b/index.html
@@ -5,39 +5,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NEXT3</title>
-  <link rel="stylesheet" href="style.css" />
-  <style type="text/css" media="all">
+  <link rel="stylesheet" href="./style.css" />
 
-td {
 
-text-align: center;
 
-color: Blue
 
-}
-
-</style>
-  <style type="text/css" media="all">
-
-h1 {
-
-text-align: center;
-
-color: hotpink
-
-}
-
-</style>
+ <style type="text/css" media="all">
+   
+table {
+      width: 80%;
+      margin: auto;
+      border-collapse: collapse;
+      background: #FFFFFF;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px 15px;
+      text-align: center;
+      border: 1px solid #DDD;
+    }
+    th {
+      background-color: #ddd;
+      color: white;
+      text-transform:uppercase;
+      letter-spacing: 1px;
+    }
+    a {
+      text-decoration: none;
+      color: #3498db;
+      font-weight: bold;
+    }
+    </style>
+    
 </head>
 
 <body>
  <center>
    <h1>LATIHAN 5 <br>
    DAFTAR SISWA</h1>
- </center>
-<center>
-<table border="1
-2"> 
+ 
+<table border="0
+"> 
   <tr>
     
     <td>No</td>
@@ -47,8 +55,8 @@ color: hotpink
   </tr>
   <tr>
      <td>1.</td>
-    <td>MA'RUF</td>
-    <td>Lihat detail</td>
+    <td>GIBRAN SLEBEW</td>
+    <td><a href="./gibran.html">Lihat Detail</a> </td>
   </tr>
   <tr>
          <td>2.</td>
