--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ table {
       border: 1px solid #DDD;
     }
     th {
-      background-color: #ddd;
+      background-color: #3498db;
       color: white;
       text-transform:uppercase;
       letter-spacing: 1px;
@@ -48,9 +48,9 @@ table {
 "> 
   <tr>
     
-    <td>No</td>
-    <td>Nama Siswa</td>
-    <td>Aksi</td>
+    <th>No</th>
+    <th>Nama Siswa</th>
+    <th>Aksi</th>
     
   </tr>
   <tr>
