--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@ table {
   <tr>
          <td>2.</td>
     <td>JOKOWI</td>
-    <td>Lihat detail</td>
+    <td><a href="./2.html">Lihat Detail</a></td>
   </tr>
   <tr>
     <td>3.</td>
     <td>NDAK TAUU</td>
-    <td>Lihat detail</td>
+    <td><a href="./3.html">Lihat Detail</a></td>
   </tr>
 </table>
 </center>
